<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity" >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="220dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="30sp"
        android:background="@drawable/edittext"
        android:text="@string/sign_up"
        android:textColor="@color/black"
       />

    <EditText
        android:id="@+id/Name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="@color/textblack"
       />

    <EditText
        android:id="@+id/age"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/textblack"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/textblack"
         />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:autofillHints=""
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/textblack"
         />

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"

        android:backgroundTint="@color/white"
        android:text="@string/sign_up1"
        android:textColor="@color/textblack"
        app:cornerRadius="5dp"
         />
</LinearLayout>