<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@drawable/secondbackground"
    tools:context=".Quizsection">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:src="@drawable/avatar"
            tools:ignore="ImageContrastCheck,VisualLintBounds"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="33dp"
            android:layout_weight=".5"
            android:text="@string/textview"
            android:textColor="#000000"
            tools:ignore="VisualLintBounds"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="172dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/todo2"
            android:src="@drawable/coin"
            tools:ignore="ImageContrastCheck,VisualLintBounds"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="255dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"

            android:layout_marginTop="34dp"
            android:layout_weight=".5"
            android:text="@string/textview1"
            android:textColor="#000000"
            tools:ignore="VisualLintBounds" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/buttonwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/scincequiz"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/question"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/what_is_your_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_one_of_these"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/buttonwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/buttonwhite"
        android:paddingEnd="10dp"
        android:text="@string/option_1"
        android:textColor="@color/textblack"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/buttonwhite"
        android:paddingEnd="10dp"
        android:text="@string/option_2"
        android:textColor="@color/textblack"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/buttonwhite"
        android:paddingEnd="10dp"
        android:text="@string/option_3"
        android:textColor="@color/textblack"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/buttonwhite"
        android:paddingEnd="10dp"
        android:text="@string/option_4"
        android:textColor="@color/textblack"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/winner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CABBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/winner"

            app:lottie_loop="true"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/lost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CABBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lost"

            app:lottie_loop="true"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>