<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/historyback"
    tools:context=".Fragment.historyFragment"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:importantForAccessibility="no"
                android:src="@drawable/avatar"
                tools:ignore="ImageContrastCheck,VisualLintBounds"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="33dp"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textColor="#000000"
                tools:ignore="VisualLintBounds"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="172dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/todo2"
                android:src="@drawable/coin"
                tools:ignore="ImageContrastCheck,VisualLintBounds"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="255dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="34dp"
                android:layout_weight=".5"
                android:text="@string/textview1"
                android:textColor="#000000"
                tools:ignore="VisualLintBounds" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyrecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
