<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homefragback"
    tools:context=".Fragment.Homefragment">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004"
            tools:layout_editor_absoluteX="0dp">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:importantForAccessibility="no"
                android:src="@drawable/avatar"
                tools:ignore="ImageContrastCheck"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="33dp"
                android:layout_weight=".5"
                android:text="@string/textview"
                tools:ignore="VisualLintBounds"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="172dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/todo2"
                android:src="@drawable/coin"
                tools:ignore="ImageContrastCheck"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="255dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="34dp"
                android:layout_weight=".5"
                android:text="@string/textview1"
                tools:ignore="VisualLintBounds" />


        </LinearLayout>


        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:gravity="center"
            android:hint="Category"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:id="@+id/categoryrecyclerview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>