<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.spinFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/secondbackground">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:importantForAccessibility="no"
                android:src="@drawable/avatar"
                tools:ignore="ImageContrastCheck,VisualLintBounds"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="33dp"
                android:layout_weight=".5"
                android:text="@string/textview"
                android:textColor="#ffff"
                tools:ignore="VisualLintBounds"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="172dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/todo2"
                android:src="@drawable/coin"
                tools:ignore="ImageContrastCheck,VisualLintBounds"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="255dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                android:layout_marginTop="34dp"
                android:layout_weight=".5"
                android:text="@string/textview1"
                android:textColor="#ffff"
                tools:ignore="VisualLintBounds" />


        </LinearLayout>

        <TextView
            android:id="@+id/sinnertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Left Chance :    "
            android:textColor="#ffff"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.019" />

        <TextView
            android:id="@+id/spinnertextnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="104dp"
            android:text=" 0"
            android:textColor="#ffff"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sinnertext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sinnertext"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/ring"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sinnertext"
            app:layout_constraintVertical_bias="0.229" />

        <ImageView
            android:id="@+id/wheel"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:src="@drawable/component"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.22" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="68dp"
            android:src="@drawable/spin"
            app:layout_constraintBottom_toBottomOf="@+id/wheel"
            app:layout_constraintEnd_toEndOf="@+id/wheel"
            app:layout_constraintStart_toStartOf="@+id/wheel"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="SPIN"
            android:id="@+id/spinbutton"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>